[project]
name = "psprelay"
version = "0.1.0"
description = "Library with specials functions for protection relays"
readme = "README.md"
authors = [
    { name = "Asmus Graumann Moser", email = "asgrm@protonmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["psprelay.psprelay"]